Rename the Jupyter Notebook
- rename the Jupyter Notebook

--- a/N-gram_modeling.ipynb
+++ b/N-gram_modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "75016fcc-3c9c-4791-90f2-429a2a85ba60",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,12 @@
    "id": "010eda33-0b39-457c-811c-addba405cf11",
    "metadata": {},
    "source": [
-    "# Create 3 Gram Dataset"
+    "# Create 3-Gram Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cbee6f60-fc3a-426f-a87f-5ebb41c9779c",
    "metadata": {},
    "outputs": [
@@ -34,15 +34,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 34.9 s\n",
-      "Wall time: 35.1 s\n"
+      "CPU times: total: 35 s\n",
+      "Wall time: 35.5 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "# set the 3 gram counter\n",
+    "# set the counter\n",
     "trigram_counter = Counter()\n",
     "\n",
     "# file name\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "df92b704-5c9f-40fb-afa9-324c58bf609e",
    "metadata": {},
    "outputs": [
@@ -70,8 +70,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 17.1 s\n",
-      "Wall time: 17.2 s\n"
+      "CPU times: total: 17.7 s\n",
+      "Wall time: 17.6 s\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "25e5c4e8-df3e-4b9b-ac72-11175c3222dc",
    "metadata": {},
    "outputs": [
@@ -110,8 +110,8 @@
       "Quantile  97.0%: 5.00\n",
       "Quantile  98.0%: 7.00\n",
       "Quantile  99.0%: 13.00\n",
-      "CPU times: total: 13.4 s\n",
-      "Wall time: 13.6 s\n"
+      "CPU times: total: 13.2 s\n",
+      "Wall time: 13.2 s\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5fd411e0-bb5c-4c32-885c-e69bb9495634",
    "metadata": {},
    "outputs": [
@@ -138,9 +138,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "orginal rows: 13778311\n",
-      "head 5 rows: 7693892\n",
-      "simplifed rows: 328781\n"
+      "orginal dataset rows: 13778311\n",
+      "top 5 dataset rows: 7693892\n",
+      "simplifed dataset rows: 328781\n"
      ]
     }
    ],
@@ -167,16 +167,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "afc7d7c4-0bf6-4b2b-8999-3d84a8574dd9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define the function of checking the input text\n",
+    "# define the function of validating input text\n",
     "def word_check(input_text):\n",
+    "\n",
+    "    # remove non-alphanumeric characters and convert to lowercase \n",
     "    cleaned_text = re.sub(r'[^\\w\\s]', '', input_text.lower())\n",
     "    words = cleaned_text.split()\n",
     "\n",
+    "    # raise error if the word lenghth is not right\n",
     "    if len(words) < 2:\n",
     "        raise ValueError(\"Invalid input: please provide at least two words.\")\n",
     "    if len(words) > 2:\n",
@@ -187,24 +190,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "e59baa40-e4e3-43df-a819-628f801df502",
    "metadata": {},
    "outputs": [],
    "source": [
     "# define the function of word prediction\n",
     "def word_prediction(input_text):\n",
+    "    \n",
+    "    # validate the input text\n",
     "    first_word, second_word = word_check(input_text)\n",
+    "\n",
+    "    # get the predicted table based on input words\n",
     "    predicted_table =  simplifed_df[(simplifed_df['word1'] == first_word) & (simplifed_df['word2'] == second_word)].reset_index(drop = True)\n",
     "    predicted_table = predicted_table[['word3', 'count_ratio']].rename(columns = {'word3': 'predicted word', 'count_ratio': 'predicted ratio'})\n",
-    "\n",
+    "    \n",
+    "    # calcualte the predicted ratio\n",
     "    predicted_table['predicted ratio'] = predicted_table['predicted ratio'].apply(lambda x: round(x * 100, 2))\n",
+    "    \n",
     "    return predicted_table, round(predicted_table['predicted ratio'].sum(), 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "id": "a3ff12db-1985-4927-9af8-9bae7ca3f0ae",
    "metadata": {},
    "outputs": [],
@@ -215,27 +224,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "7a716eaa-b04b-4a96-ab6d-b9297d4f3fe2",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total probability: 15.49\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>predicted word</th>\n",
+       "      <th>predicted ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>not</td>\n",
+       "      <td>8.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>the</td>\n",
+       "      <td>7.04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(  predicted word  predicted ratio\n",
-       " 0            not             8.45\n",
-       " 1            the             7.04,\n",
-       " 15.489999999999998)"
+       "  predicted word  predicted ratio\n",
+       "0            not             8.45\n",
+       "1            the             7.04"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# predict word based on input text\n",
-    "word_prediction(input_text)"
+    "result_df, result_prop = word_prediction(input_text)\n",
+    "print(f'Total predicted ratio:', result_prop)\n",
+    "result_df"
    ]
   },
   {
@@ -248,21 +303,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "896e7237-13a4-4f77-9748-4660126be860",
    "metadata": {},
    "outputs": [],
    "source": [
     "# define the function of generating sentence\n",
     "def sentence_generation(input_text):\n",
+    "\n",
+    "    # validate the input text\n",
     "    first_word, second_word = word_check(input_text)\n",
-    "    \n",
+    "\n",
+    "    # create a sentence with the input text as start\n",
     "    create_text_list = input_text.split()\n",
-    "    \n",
+    "\n",
+    "    # while there are still next word\n",
     "    while len(list(simplifed_df.loc[(simplifed_df['word1'] == first_word) & (simplifed_df['word2'] == second_word), 'word3'])) != 0:\n",
+    "        \n",
+    "        # predict the third word list\n",
     "        third_word_list = list(simplifed_df.loc[(simplifed_df['word1'] == first_word) & (simplifed_df['word2'] == second_word), 'word3'])\n",
+    "        \n",
+    "        # randomly choose a third word to avoid repetitive word loops\n",
     "        third_word = third_word_list[random.randint(0, len(third_word_list) - 1)]\n",
+    "\n",
+    "        # append the thrid word to the sentence\n",
     "        create_text_list.append(third_word)\n",
+    "\n",
+    "        # word shifting\n",
     "        first_word, second_word = second_word, third_word\n",
     "\n",
     "    return ' '.join(create_text_list)"
@@ -334,23 +401,45 @@
     }
    ],
    "source": [
+    "# create a interactive interface\n",
     "with gr.Blocks() as demo:\n",
+    "\n",
+    "    # in a row\n",
     "    with gr.Row():\n",
+    "\n",
+    "        # 1st column\n",
     "        with gr.Column():\n",
+    "            \n",
+    "            # title\n",
     "            gr.Markdown(\"## Word Prediction\")\n",
+    "            \n",
+    "            # input reminder\n",
     "            input1 = gr.Textbox(label=\"Please input 2 words\")\n",
+    "\n",
+    "            # generate output\n",
     "            output1 = gr.Dataframe(headers=[\"predicted word\", \"predicted ratio\"], label = \"Prediction Table\")\n",
     "            output2 = gr.Number(label = \"Prediction Total Ratio\")\n",
+    "\n",
+    "            # button\n",
     "            btn1 = gr.Button(\"Predict\")\n",
     "            btn1.click(fn = word_prediction, inputs = input1, outputs=[output1, output2])\n",
-    "            \n",
+    "\n",
+    "        # 2nd column\n",
     "        with gr.Column():\n",
+    "            # title\n",
     "            gr.Markdown(\"## Sentence Generation\")\n",
+    "\n",
+    "            # input reminder\n",
     "            input2 = gr.Textbox(label=\"Please input 2 words\")\n",
+    "\n",
+    "            # generate output\n",
     "            output2 = gr.Textbox(label=\"Generated Sentence\")\n",
+    "\n",
+    "            # button\n",
     "            btn2 = gr.Button(\"Generate\")\n",
     "            btn2.click(fn = sentence_generation, inputs = input2, outputs = output2)\n",
     "\n",
+    "# launch the interface\n",
     "demo.launch(inline = True)"
    ]
   },
